crates/cadenza/src/generated/snapshots/cadenza__generated__test_data__errors__errors.snap
---
source: crates/cadenza/src/generated/test_data.rs
expression: "1 + \"string\"\nundefined_var\n"
---
Cadenza REPL v0.1.0
Type expressions to evaluate. Press Ctrl+D or Ctrl+C to exit.

^D
Evaluation errors:
  error: type error: expected integer | float, got string
Evaluation errors:
  error: undefined variable: undefined_var at 0..13
